--- a/roles/cs-master/tasks/main.yml
+++ b/roles/cs-master/tasks/main.yml
@@ -1,39 +1,39 @@
 ---   
 # http://docs.cloudstack.apache.org/projects/cloudstack-installation/en/4.9/management-server/index.html
-- name: Create /etc/yum.repos.d/cloudstack.repo
-  copy:
-    src: cloudstack.repo
-    dest: /etc/yum.repos.d/cloudstack.repo
+#- name: Create /etc/yum.repos.d/cloudstack.repo
+#  copy:
+#    src: cloudstack.repo
+#    dest: /etc/yum.repos.d/cloudstack.repo
     
-- name: Install http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-  yum:
-    name: http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-    state: present
+#- name: Install http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+#  yum:
+#    name: http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+#    state: present
 
-- name: Install http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
-  yum:
-    name: http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
-    state: present
+#- name: Install http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
+#  yum:
+#    name: http://repo.mysql.com/mysql-community-release-el7-5.noarch.rpm
+#    state: present
 
 #- name: Install epel-release
 #  package:
 #    name: epel-release
 #    state: latest  
 
-- name: Install cloudstack-management
-  package:
-    name: cloudstack-management
-    state: latest
+#- name: Install cloudstack-management
+#  package:
+#    name: cloudstack-management
+#    state: latest
     
-- name: Install mysql-server
-  package:
-    name: mysql-server
-    state: latest
+#- name: Install mysql-server
+#  package:
+#    name: mysql-server
+#    state: latest
 
-- name: Install expect
-  package:
-    name: expect
-    state: latest
+#- name: Install expect
+#  package:
+#    name: expect
+#    state: latest
     
 #yum -y update
 #reboot
@@ -59,18 +59,23 @@
   shell: |
     set timeout 300
     spawn mysql_secure_installation
-    expect "Enter current password for root (enter for none):" { send \r }
-    expect "Set root password? [Y/n] " { send Y\r }
+    expect "Enter current password for root (enter for none):" { send \n\r }
+    expect "Set root password? [Y/n] " { send \r }
     expect "New password: " { send {{ cs_master_password }}\r }
     expect "Re-enter new password: " { send {{ cs_master_password }}\r }
-    expect "Remove anonymous users? [Y/n] " { send Y\r }
-    expect "Disallow root login remotely? [Y/n] " { send Y\r }
-    expect "Remove test database and access to it? [Y/n] " { send Y\r }
-    expect "Reload privilege tables now? [Y/n] " { send Y\r }
+    expect "Remove anonymous users? [Y/n] " { send "Y"\r }
+    expect "Disallow root login remotely? [Y/n] " { send "Y"\r }
+    expect "Remove test database and access to it? [Y/n] " { send "Y"\r }
+    expect "Reload privilege tables now? [Y/n] " { send "Y"\r }
     expect eof    
 #    interact
   args:
     executable: /usr/bin/expect
+  register: mysql_secure
+
+- debug: msg="{{ mysql_secure.stdout }}"
+
+- debug: msg="{{ mysql_secure.stderr }}"    
     
 - name: Run cloudstack-setup-databases 
   shell: "cloudstack-setup-databases cloud:{{ cs_master_password }}@localhost --deploy-as=root:{{ cs_master_password }} -m {{ cs_master_password }} -k {{ cs_master_password }}"
